ingress/devops-toolkit.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-toolkit
spec:
  selector:
    matchLabels:
      type: frontend
      service: devops-toolkit
  replicas: 3
  template:
    metadata:
      labels:
        type: frontend
        service: devops-toolkit
    spec:
      containers:
      - name: myapp
        image: <Image>
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: <Port>
